--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
-assets/*
-!assets/.gitignore
-protected/runtime/*
-!protected/runtime/.gitignore
-protected/data/*.db
-themes/classic/views/
+app/assets/*
+!app/assets/.gitignore
+app/protected/runtime/*
+!app/protected/runtime/.gitignore
+app/protected/data/*.db
+app/themes/classic/views/
+app/vendor
+.env
+.idea
