--- a/app/composer.json
+++ b/app/composer.json
@@ -11,7 +11,9 @@
   ],
   "require": {
     "php": ">=8.4",
-    "yiisoft/yii": "1.1.*"
+    "yiisoft/yii": "1.1.*",
+    "php-amqplib/php-amqplib": "^3.5",
+    "guzzlehttp/guzzle": "^7.0"
   },
   "config": {
     "vendor-dir": "vendor"
