--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,27 @@
 version: '3.8'
 
+x-php-base: &php-base
+  build:
+    context: ./docker/php
+    dockerfile: Dockerfile
+  volumes:
+    - ./app:/var/www/html
+  environment:
+    DB_HOST: ${DB_HOST}
+    DB_NAME: ${DB_NAME}
+    DB_USER: ${DB_USER}
+    DB_PASSWORD: ${DB_PASSWORD}
+    SMSPILOT_API_KEY: ${SMSPILOT_API_KEY}
+    RABBITMQ_HOST: ${RABBITMQ_HOST}
+    RABBITMQ_PORT: ${RABBITMQ_PORT}
+    RABBITMQ_USER: ${RABBITMQ_USER}
+    RABBITMQ_PASSWORD: ${RABBITMQ_PASSWORD}
+  depends_on:
+    - mysql
+    - rabbitmq
+  networks:
+    - book-catalog-network
+
 services:
   nginx:
     image: nginx:alpine
@@ -16,21 +38,26 @@ services:
       - book-catalog-network
 
   php:
-    build:
-      context: ./docker/php
-      dockerfile: Dockerfile
+    <<: *php-base
     container_name: book-catalog-php
-    volumes:
-      - ./app:/var/www/html
-      - ./app/vendor:/var/www/vendor
+
+  worker:
+    <<: *php-base
+    container_name: book-catalog-worker
+    command: ["php", "/var/www/html/protected/yiic.php", "worker", "run"]
+    restart: unless-stopped
+
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+    container_name: book-catalog-rabbitmq
+    ports:
+      - "5672:5672"
+      - "15672:15672"
     environment:
-      DB_HOST: ${DB_HOST}
-      DB_NAME: ${DB_NAME}
-      DB_USER: ${DB_USER}
-      DB_PASSWORD: ${DB_PASSWORD}
-      SMSPILOT_API_KEY: ${SMSPILOT_API_KEY}
-    depends_on:
-      - mysql
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASSWORD}
+    volumes:
+      - rabbitmq-data:/var/lib/rabbitmq
     networks:
       - book-catalog-network
 
@@ -53,3 +80,4 @@ networks:
 
 volumes:
   mysql-data:
+  rabbitmq-data:
